Komplettüberarbeitung von Innsmouth dank EAPoe

--- a/The Shadow over Innsmouth/chapter1.tex
+++ b/The Shadow over Innsmouth/chapter1.tex
@@ -6,7 +6,7 @@ Scharfsinnigere Verfolger der Nachrichten jedoch wunderten sich über die erstau
 
 Beschwerden von vielen Bürgerrechtsorganisationen wurde mit langen, vertraulichen Diskussionen begegnet und ihre Vertreter wurden auf Ausflüge zu diversen Lagern und Gefängnissen geschickt. Daraufhin wurden diese Verbände überraschend passiv und zurückhaltend. Zeitungsleute waren schwerer zu bewältigen, schienen aber letztendlich größtenteils mit der Regierung zu kooperieren. Nur eine Zeitung --- ein Boulevardblatt, stets ignoriert wegen seiner wilden Methoden --- erwähnte das Tiefsee-U-Boot, das Torpedos hinunter in den Meeresabgrund jensets von Devil Reef feuerte. Dieser Punkt, zufällig in einem Treffpunkt von Seemännern aufgeschnappt, schien in der Tat weit hergeholt, da das seichte, schwarze Riff ganze Eineinhalb Meilen außerhalb vom Hafen von Innsmouth liegt.
 
-Die Menschen auf dem Land und in den umliegenden Gemeinden murmelten untereinander sehr viel, verrieten aber der Außenwelt nur wenig. Sie hatten sich über das sterbende, halbverlassene Innsmouth schon seit fast einem Jahrhundert unterhalten und keine Neuigkeit konnte wilder oder abscheulicher sein als das, was sie schon vor Jahren geflüstert und angedeutet hatten.
+Die Menschen auf dem Land und in den umliegenden Gemeinden murmelten untereinander sehr viel, verrieten aber der Außenwelt nur wenig. Sie hatten sich über das sterbende, halbverlassene Innsmouth schon seit fast einem Jahrhundert unterhalten und keine Neuigkeit konnte wilder oder abscheulicher sein als das, was sie schon vor Jahren geflüstert hatten anklingen lassen.
 %''Many things had taught them secretiveness, and there was now no need to exert pressure on them.'' Ich bin mir nicht sicher, was der Satz bedeuten soll. Übersetzung vorläufig, für Revision vormerken.
 Viele Dinge hatten sie Verschwiegenheit gelehrt und es gab auch jetzt keinen Grund, Druck auf sie auszuüben. Überdies wussten sie in Wirklichkeit sehr wenig, da einsame und unbevölkerte Salzwiesen die Nachbarn zu Lande von Innsmouth trennen.
 
@@ -16,7 +16,7 @@ Ich war es, der in den frühen Morgenstunden des 16. Juli 1927 verzweifelt aus I
 
 Ich hatte nie von Innsmouth gehört, bis zu dem Tag bevor ich es zum ersten --- und bislang letzten mal sah. Ich war dabei, mein Erwachsenwerden mit einer Tour durch Neuengland zu feiern --- zur Besichtigung, Altertumskunde und Ahnenforschung --- und hatte geplant, direkt vom uralten Newburyport nach Arkham zu reisen, von wo die Familie meiner Mutter sich ableitet. Ich hatte kein Auto, sondern reiste mit Bahn, Straßenbahn und Reisebus, immer nach der billigsten Route suchend. In Newburyport erzählte man mir, dass der Dampfzug das Transportmittel sei, das ich nach Arkham wählen sollte und es war erst  am Fahrkartenschalter des Bahnhofs, als ich mich gegen den hohen Fahrpreis sträubte, dass ich von Innsmouth hörte. Der beleibte, verschmitzt blickende Fahrkartenverkäufer, dessen Aussprache ihn als nicht von hier verriet, schien verständnisvoll gegenüber meinen Bemühungen zur Sparsamkeit und machte einen Vorschlag, den keine meiner anderen Informationsquellen parat hatte.
 
-\glqq Sie \textit{könnten} vermutlich den alten Bus nehmen,\grqq\ sagte er etwas zögerlich, \glqq aber man hält hier nicht viel davon. Er fährt durch Innsmouth --- vielleicht haben Sie davon gehört --- und daher mögen die Leute ihn nicht. Betrieben von einem Innsmouther Kerl --- Joe Sargent --- aber kriegt nie irgendwelche Kundschaft von hier oder Arkham, glaube ich. Frage mich, warum er überhaupt fährt. Ich denk' es ist recht günstig, aber ich seh da nie mehr als zwei oder drei Leute drin --- niemand außer Leuten aus Innsmouth. Fährt ab vom Platz --- vor Hammond's Drogerie --- um 10 Uhr morgens und 7 Uhr abends, außer wenn sie das in letzter Zeit geändert haben. Sieht aus wie eine fürchterliche Klapperkiste --- Ich hab' da nie drin gesessen.\grqq
+\glqq Sie \textit{könnten} vermutlich den alten Bus nehmen,\grqq\ sagte er etwas zögerlich, \glqq aber hier hält man nicht viel davon. Er fährt durch Innsmouth --- vielleicht haben Sie davon gehört --- und daher mögen die Leute ihn nicht. Betrieben von einem Innsmouther Kerl --- Joe Sargent --- aber kriegt nie irgendwelche Kundschaft von hier oder Arkham, glaube ich. Frage mich, warum er überhaupt fährt. Ich denk' es ist recht günstig, aber ich seh da nie mehr als zwei oder drei Leute drin --- niemand außer Leuten aus Innsmouth. Fährt ab vom Platz --- vor Hammond's Drogerie --- um 10 Uhr morgens und 7 Uhr abends, wenn sie das nicht in letzter Zeit geändert haben. Sieht aus wie eine fürchterliche Klapperkiste --- Ich hab' da nie drin gesessen.\grqq
 
 Das war das erste, das ich jemals vom beschatteten Innsmouth hörte. Jeder Hinweis auf eine Stadt, die auf geläufigen Karten nicht verzeichnet und in aktuellen Reiseführern nicht gelistet ist, hätte mich interessiert und die Art und Weise der Andeutungen des Fahrkartenverkäufers weckten in mir eine regelrechte Neugier. Eine Stadt, fähig solche Abneigung in ihren Nachbarn hervorzurufen, dachte ich, muss zumindest recht ungewöhnlich und die Aufmerksamkeit eines Touristen wert sein. Wenn sie vor Arkham käme, könnte ich dort Station machen --- und so bat ich den Verkäufer, mir etwas darüber zu erzählen. Er war sehr bedachtsam und sprach mit einer Miene, als fühle er sich dem was er sagte überlegen.
 
@@ -26,7 +26,7 @@ Mehr leere Häuser als Menschen, schätze ich und kein nennenswertes Geschäft a
 
 Die Raffinerie war allerdings mal ein ziemliches Ding und der alte Marsh, dem sie gehört muss reicher als Krösus sein. Ist aber 'n komischer alter Vogel und hält sich fast nur in seinem Haus auf. Er hat im Alter angeblich 'ne Hautkrankheit oder Missbildung entwickelt, die dafür sorgt, dass er sich außer Sicht hält. Enkel von Käpt'n Obed Marsh, der das Geschäft begründet hat. Seine Mutter scheint irgendeine Fremde gewesen  zu sein --- man sagt, eine Südseeinsulanerin --- also gab's mächtig Radau als er vor fünfzig Jahren 'n Mädel aus Ipswich geheiratet hat. Die machen das immer bei Leuten aus Innsmouth und die Menschen hier und in der Gegend versuchen immer, jedwedes Innsmouther Blut, das in ihren Adern fließt zu verheimlichen. Aber Marsh's Kinder und Enkelkinder sehen aus wie jeder andere, soweit ich's sehen kann. Ich hab' sie mir hier mal zeigen lassen --- obwohl, jetzt wo ich drüber nachdenke, die älteren Kinder scheinen in letzter Zeit nicht in der Gegend zu sein. Hab' den alten Mann nie gesehen.
 
-Und warum hat jedermann hier etwas gegen Innsmouth? Nun, junger Mann, Sie dürfen sich nicht zu sehr dafür interessieren, was die Leute hier sagen. Es ist schwer, sie zum Reden zu bringen, aber wenn sie mal anfangen, lassen sie nicht nach. Sie haben schon immer Dinge über Innsmouth erzählt --- geflüstert meist --- für die letzten hundert Jahre, glaub' ich und wenn ich das richtig erfass', sind sie eher verängstigt als irgendsonstwas. Manche von den Geschichten würden einen echt zum Lachen bringen -- darüber, wie der alte Käpt'n Marsh Pakte mit dem Teufel schloss und Kobolde aus der Hölle holte um in Innsmouth zu leben, oder über irgendwelche Teufelsanbetungen und furchtbare Opfer irgendwo bei den Werften, auf die die Leute um 1845 gestoßen sind --- aber ich komm' aus Panton, Vermont und diese Sorte Geschichten schluck ich nicht so einfach.
+Und warum hat jedermann hier etwas gegen Innsmouth? Nun, junger Mann, Sie dürfen sich nicht zu sehr dafür interessieren, was die Leute hier sagen. Es ist schwer, sie zum Reden zu bringen, aber wenn sie mal anfangen, lassen sie nicht nach. Sie haben schon immer Dinge über Innsmouth erzählt --- meist unter vorgehaltener Hand --- für die letzten hundert Jahre, glaub' ich und wenn ich das richtig erfass', sind sie eher verängstigt als irgendsonstwas. Manche von den Geschichten würden einen echt zum Lachen bringen -- darüber, wie der alte Käpt'n Marsh Pakte mit dem Teufel schloss und Kobolde aus der Hölle holte um in Innsmouth zu leben, oder über irgendwelche Teufelsanbetungen und furchtbare Opfer irgendwo bei den Werften, auf die die Leute um 1845 gestoßen sind --- aber ich komm' aus Panton, Vermont und diese Sorte Geschichten schluck ich nicht so einfach.
 
 Sie sollten aber hören, was ein paar von den Alten über das schwarze Riff vor der Küste erzählen --- Devil Reef nennen sie es. Es ragt die meiste Zeit deutlich aus dem Wasser und liegt nie tief darunter, dabei kann man es aber kaum eine Insel nennen. Die Geschichte sagt, dass man manchmal eine ganze Legion von Teufeln auf dem Riff sehen ist --- ausgestreckt oder in einer Art Höhlen auf der Spitze ein und aus huschen. Es ist ein schroffes, unebenes Ding, mehr als eine Meile weit draußen und zum Ende der Schiffartszeit machten die Seeleute große Umwege um es zu vermeiden.
 
@@ -34,39 +34,39 @@ Das heißt, Seeleute die nicht aus Innsmouth waren. Eine Sache, die sie gegen de
 
 Das war vor der großen Seuche von 1846, als es mehr als die Hälfte der Bewohner von Innsmouth dahingerafft hat. Sie haben nie wirklich rausgefunden, was es war aber es war wahrscheinlich irgendeine fremde Krankheit, eingeschleppt aus China oder von sonstwo durch die Schiffahrt. Als wenn das nicht schlimm genug gewesen wäre --- gab' es Krawalle darüber und alles mögliche, scheußliche Tun von dem ich nicht glaube, dass es je die Stadt verlassen hat --- und es hat den Ort in einem furchtbaren Zustand hinterlassen. Hat sich nie erholt -- da können heute nicht mehr als 300 oder 400 Menschen wohnen.
 
-Aber in Wirklichkeit stecken dahinter wie die Leute denken einfach Rassenvorurteile --- nicht, dass ich es denjenigen, die sie haben vorwerfen würde. Ich hasse diese Innsmouth-Leute auch und ich würde nicht in ihre Stadt fahren wollen. Ich denk, Du weißt --- auch wenn Du wie ein Weststaatler klingst --- wieviel unsere neuenglischen Schiffe mit zweifelhaften Häfen in Afrika, Asien, der Südsee und sonstwo und was für seltsame Leute die manchmal mitbrachten. Du hast vielleicht von dem Seemann aus Salem gehört, der mit einer Chinesin zur Frau nach Heim kam, und vielleicht weißt Du auch, dass da immer noch ein Haufen Fiji-Insulaner rund um Cape Cod leben.
+Aber in Wirklichkeit stecken dahinter wie die Leute denken einfach Rassenvorurteile --- nicht, dass ich es denjenigen, die sie haben vorwerfen würde. Ich hasse diese Innsmouth-Leute auch und ich würde nicht in ihre Stadt fahren wollen. Ich denke, Du weißt --- auch wenn Du wie ein Weststaatler klingst --- wieviel unsere neuenglischen Schiffe mit zweifelhaften Häfen in Afrika, Asien, der Südsee und sonstwo zu tun hatten und was für seltsame Leute die manchmal mitbrachten. Du hast vielleicht von dem Seemann aus Salem gehört, der mit einer Chinesin zur Frau nach Heim kam, und vielleicht weißt Du auch, dass da immer noch ein Haufen Fiji-Insulaner rund um Cape Cod leben.
 
 Naja, da muss sowas mit den Innsmouthern sein. Der Ort war immer furchtbar vom Rest des Landes durch Marschen und Bäche abgeschnitten und man kann sich nicht über die Kleinigkeiten bei der Sache sicher sein, aber es ist ziemlich klar, dass Käpt'n Marsh ein paar ziemlich merkwürdige Exemplare mit als er noch alle drei Schiffe in Dienst hatte früher, in den Zwanzigern und Dreißigern. Da ist sicherlich ein fremdartiger Charakterzug in den Innsmouth-Leuten heutzutage --- Ich weiß nicht, wie ich es erklären soll aber es macht einem irgendwie Gänsehaut. Du wirst es ein wenig in Sargent bemerken, wenn Du seinen Bus nimmst. Manche von denen haben seltsam schmale Köpfe mit flachen Nasen und starre Glotzaugen, die nie zu blinzeln scheinen und mit deren Haut stimmt was nicht. Spröde und schorfig und die Seiten ihrer Hälse sind total verschrumpelt oder zerknittert. Kriegen auch alle ziemlich jung 'ne Glatze. Die älteren Kameraden sehen am schlimmsten aus --- Tatsache ist, ich glaube nicht, dass ich je einen sehr alten Typ von der Art gesehen hab'. Wette, die sterben wenn sie in den Spiegel schauen! Sind auch von Tieren gehasst --- die hatten viel Ärger mit Pferden bevor Autos hier Einzug hielten.
 
 Niemand hier oder in Arkham oder Ipswich will irgendwas mit denen zu tun haben und sie selbst verhalten sich eher reserviert wenn sie in die Stadt kommen oder irgendwer in ihrer Gegend zu fischen versucht. Ist seltsam, wie die Fische sich immer dicht vor dem Hafen von Innsmouth tummeln, wenn nirgendwo sonst welche zu finden sind --- aber versuch mal, selbst da zu fischen und sieh wie die Kerle dich verjagen! Die Leute sind früher mit der Eisenbahn gekommen --- sind gelaufen und haben den Zug bei Rowley genommen, nachdem die Nebenstrecke aufgegeben worden war --- aber jetzt nehmen sie den Bus.
 
-Ja, da gibt es ein Hotel in Innsmouth --- genannt das Gilman House --- aber ich glaube nicht, dass das viel was ist. Ich würde dir nicht raten, es auszuprobieren. Bleib lieber hier und nehm den 10-Uhr-Bus morgen früh, dann kannst Du mit dem Abendbus von da nach Arkham um acht. Da war mal ein Fabrikinspektor, der vor ein paar Jahren mal im Gilman abgestiegen ist und er hatte eine Menge unschöne Andeutungen darüber zu machen. Scheint, die kriegen da eine seltsame Kundschaft, denn der Kerl hat Stimmen in anderen Räumen gehört --- obwohl die meisten leer waren --- die ihn das Fürchten gelehrt haben. Es war 'ne Fremdsprache, glaubte  er, aber er sagte, das Schlimme daran war eine Stimme, die manchmal sprach. Sie klang so unnatürlich --- schlabbernd, sagte er --- so dass er sich nicht traute, sich auszuziehen und zu schlafen. Wartete einfach und machte sich mit dem ersten Licht am Morgen davon. Das Gerede ging fast die ganze Nacht.
+Ja, da gibt es ein Hotel in Innsmouth --- genannt das Gilman House --- aber ich glaube nicht, dass das viel was ist. Ich würde dir nicht raten, es auszuprobieren. Bleib lieber hier und nehm den 10-Uhr-Bus morgen früh, dann kannst Du mit dem Abendbus von da nach Arkham um acht. Da war mal ein Fabrikinspektor, der vor ein paar Jahren mal im \textit{Gilman} abgestiegen ist und er hatte eine Menge unschöne Andeutungen darüber zu machen. Scheint, die kriegen da eine seltsame Kundschaft, denn der Kerl hat Stimmen in anderen Räumen gehört --- obwohl die meisten leer waren --- die ihn das Fürchten gelehrt haben. Es war 'ne Fremdsprache, glaubte  er, aber er sagte, das Schlimme daran war eine Stimme, die manchmal sprach. Sie klang so unnatürlich --- schlabbernd, sagte er --- so dass er sich nicht traute, sich auszuziehen und zu schlafen. Wartete einfach und machte sich mit dem ersten Licht am Morgen davon. Das Gerede ging fast die ganze Nacht.
 
 Dieser Bursche --- Casey war sein Name --- hatte 'ne Menge drüber zu erzählen, wie die Innsmouth-Leute ihn beobachtet haben und dass sie irgendwie auf der Hut zu sein schienen. Ihm kam die Marsh-Raffinerie merkwürdig vor --- ist in einer alten Fabrik an den unteren Fällen des Manuxet. Was er erzählte, passt zu dem was ich sonst gehört hab'. Die Bücher schlecht geführt und keine wirklichen Aufzeichnungen über irgendwelche Geschäfte. Weißt Du, es war immer etwas mysteriös, wo die Marshes das Gold, das sie aufbereiten herbekommen. Sie schienen nie sehr viel davon anzukaufen aber vor Jahren haben sie eine enorme Menge Barren verschifft.
 
 Man hört Gerüchte über seltsamen, fremdartigen Schmuck, den Seemänner und Raffineriearbeiter manchmal heimlich verkauft haben, oder den man ein-zwei mal an einigen der Marsh-Frauen gesehen hat. Die Leute dachten, dass vielleicht der alte Käpt'n Obed das in irgendeinem Heidenhafen erhandelt hat, besonders weil er immer stapelweise Glasperlen und Kinkerlitzchen, die Seemänner für Handel mit Eingeborenen benutzten, kaufte. Andere glaubten und glauben noch heute, dass er einen alten Piratenschatz draußen am Devil Reef gefunden hat. Aber hier ist das Komische an der Sache: Der alte Käpt'n ist seit sechzig Jahren tot und es ist seit dem Bürgerkrieg kein größeres Schiff aus dem Hafen aufgebrochen, aber die Marshes kaufen immer noch ein paar von diesen Eingeborenen-Handelswaren --- größtenteils Plunder aus Glas und Gummi, heißt es. Vielleicht mögen die Innsmouther sie selbst anschauen --- Gott weiß, die müssen mittlerweile so schlimm dran sein wie Südseekannibalen und Wilde aus Guinea!
 
-Die Seuche von '46 muss das beste Blut im Ort dahingerafft haben. Jedenfalls sind sie nun ein zweifelhafter Haufen und die Marshes und die anderen Reichen sind genau so schlimm wie der Rest. Wie gesagt, da leben wahrscheinlich nicht mehr als 400 Leute in dem ganzen Dorf, trotz all der Straßen, die es da angeblich gibt. Ich glaube, die sind, was man im Süden 'weißes Pack' nennt --- gesetzlos, durchtrieben und voll geheimnistuerischer Machenschaften. Die haben eine Menge Fisch und Hummer und exportieren die per Lastwagen. Seltsam, wie es vor Fischen dort nur so wimmelt und nirgendwo sonst.
+Die Seuche von '46 muss das beste Blut im Ort dahingerafft haben. Jedenfalls sind sie nun ein zweifelhafter Haufen und die Marshes und die anderen Reichen sind genau so schlimm wie der Rest. Wie gesagt, da leben wahrscheinlich nicht mehr als 400 Leute in dem ganzen Dorf, trotz all der Straßen, die es da angeblich gibt. Ich glaube, die sind, was man im Süden \textit{weißes Pack} nennt --- gesetzlos, durchtrieben und voll geheimnistuerischer Machenschaften. Die haben eine Menge Fisch und Hummer und exportieren die per Lastwagen. Seltsam, wie es vor Fischen dort nur so wimmelt und nirgendwo sonst.
 
 Niemand kann diese Leute im Auge behalten und Schulbeamte wie Volkszähler haben da eine Höllenarbeit. Du kannst drauf wetten, dass neugierige Fremde in Innsmouth nicht willkommen sind. Ich hab' selbst schon von mehr als einem Geschäftsmann oder Regierungsbeamten gehört, der dort verschwunden ist und es gibt vage Gerüchte, dass einer verrückt geworden ist und jetzt draußen in Danvers einsitzt. Die müssen ihm einen fürchterlichen Schrecken eingejagt haben.
 
 Darum würde ich an deiner Stelle nicht über Nacht dorthin. Ich war da nie und habe auch nicht den Wunsch, dahin zu gehen, aber ich schätze, ein Tagesausflug würde dir nicht schaden --- auch wenn die Leute hier dir raten werden, den nicht anzutreten. Wenn Du nur auf die Besichtigung von altertümlichen Sachen aus bist, sollte Innsmouth der Ort für dich sein.\grqq
 
-Und so verbrachte ich einen Teil des Abends in der öffentlichen Bibliothek von Newburyport damit, Daten über Innsmouth nachzulesen. Als ich versucht hatte, die Einwohner in den Läden, dem Pausenraum, den Werkstätten und dem Feuerwehrhaus zu befragen, empfand ich es noch schwerer, sie in Gang zu bekommen als der Fahrkartenverkäufer es vorausgesagt hatte und mir wurde klar, dass ich keine Zeit hatte, ihre instinktive Verschwiegenheit zu überkommen. Sie besaßen eine Art obskures Misstrauen, als wenn etwas verkehrt wäre mit jemandem, der sich zu sehr für Innsmouth interessiere. In der YMCA-Herberge, in der ich abstieg, entmutigte mich der Angestellte dort lediglich, in solch einen düsteren, entarteten Ort zu reisen und die Menschen in der Bibliothek zeigten ziemlich genau dieselbe Haltung. Offensichtlich war Innsmouth in den Augen der Gebildeten lediglich ein übertriebener Fall von gesellschaftlicher Degeneration.
+Und so verbrachte ich einen Teil des Abends damit, in der öffentlichen Bibliothek von Newburyport Daten über Innsmouth nachzulesen. Als ich versucht hatte, die Einwohner in den Läden, dem Pausenraum, den Werkstätten und dem Feuerwehrhaus zu befragen, empfand ich es noch schwerer, sie in Gang zu bekommen als der Fahrkartenverkäufer es vorausgesagt hatte und mir wurde klar, dass ich keine Zeit hatte, ihre instinktive Verschwiegenheit zu überkommen. Sie besaßen eine Art obskures Misstrauen, als wenn etwas verkehrt wäre mit jemandem, der sich zu sehr für Innsmouth interessiere. In der YMCA-Herberge, in der ich abstieg, riet mir der Angestellte dort lediglich davon ab, in solch einen düsteren, entarteten Ort zu reisen und die Menschen in der Bibliothek zeigten ziemlich genau dieselbe Haltung. Offensichtlich war Innsmouth in den Augen der Gebildeten lediglich ein übertriebener Fall von gesellschaftlicher Degeneration.
 
 Die Geschichtsbücher von Essex County in den Regalen der Bibliothek sagten wenig aus, außer dass die Stadt 1643 gegründet worden, bekannt für Schiffsbau vor der Revolution, ein Sitz großen auf dem Meer basierenden Wohlstands im frühen neunzehnten Jahrhundert und später ein kleineres Industriezentrum mit dem Manuxet als Energiequelle war. Die Seuche und Aufstände von 1846 wurden spärlich dokumentiert, als brächten sie den Landkreis in Verruf.
 
-Verweise auf den Niedergang waren selten, obwohl die Bedeutung der späteren Aufzeichnungen unverkennbar war. Nach dem Bürgerkrieg war alles industrielle Treiben auf die Marsh-Raffinerie beschränkt und der Vertrieb von Goldbarren stellte den einzig verbliebenen Handel neben der immer währenden Fischerei dar. Diese Fischerei zahlte sich weniger und weniger aus, als der Preis der Bedarfsware fiel und große Unternehmen Konkurrenz machten, doch es mangelte nie an Fisch rund um den Hafen von Innsmouth. Fremde siedelten selten dort und es gab dezente Hinweise darauf, dass eine Anzahl an Polen und Portugiesen, die es veruscht hatten in besonders drastischer Weise vertrieben worden waren.
+Verweise auf den Niedergang waren selten, obwohl die Bedeutung der späteren Aufzeichnungen unverkennbar war. Nach dem Bürgerkrieg war alles industrielle Treiben auf die Marsh-Raffinerie beschränkt und der Vertrieb von Goldbarren stellte den einzig verbliebenen Handel neben der immer währenden Fischerei dar. Diese Fischerei zahlte sich weniger und weniger aus, als der Preis der Bedarfsware fiel und große Unternehmen Konkurrenz machten, doch es mangelte nie an Fisch rund um den Hafen von Innsmouth. Fremde siedelten selten dort und es gab dezente Hinweise darauf, dass eine Anzahl an Polen und Portugiesen, die es versucht hatten in besonders drastischer Weise vertrieben worden waren.
 
-Am interessantesten von allem war ein beiläufiger Verweis auf den fremdartigen Schmuck,  der flüchtig mit Innsmouth verbunden war. Er hatte offensichtlich den ganzen Landstrich nicht wenig beeindruckt,  denn es wurden Exemplare im Museum der Miskatonic University in Arkham und im Ausstellungsraum der Newburyport Hiatorical Society erwähnt. Die lückenhaften Beschreibungen dieser Dinge waren dürftig und trocken,  doch deuteten sie für mich einen Unterton von andauernder Fremdartigkeit an. Etwas an ihnen schien so sonderbar und provozierend, dass ich sie nicht aus dem Kopf bekommen konnte und trotz der relativ späten Stunde beschloss ich, das lokale Exemplar --- angeblich ein großes, merkwürdig proportioniertes Stück, das augenscheinlich zu einer Tiara gehörte --- falls es sich arrangieren ließe.
+Am interessantesten von allem war ein beiläufiger Verweis auf den fremdartigen Schmuck,  der flüchtig mit Innsmouth verbunden war. Er hatte offensichtlich den ganzen Landstrich nicht wenig beeindruckt,  denn es wurden Exemplare im Museum der Miskatonic University in Arkham und im Ausstellungsraum der Newburyport Historical Society erwähnt. Die lückenhaften Beschreibungen dieser Dinge waren dürftig und trocken,  doch ließen sie für mich einen Unterton von andauernder Fremdartigkeit erahnen. Etwas an ihnen schien so sonderbar und provozierend, dass ich sie nicht aus dem Kopf bekommen konnte und trotz der relativ späten Stunde beschloss ich, das lokale Exemplar --- angeblich ein großes, merkwürdig proportioniertes Stück, das augenscheinlich zu einer Tiara gehörte --- falls es sich arrangieren ließe.
 
 Der Bibliothekar gab mir ein Einführungsschreiben an die Kuratorin der Gesellschaft, eine Miss Anna Tilton, die in der Nähe lebte und nach einer kurzen Erklärung war die vornehme, uralte Dame so freundlich, mich in das geschlossene Gebäude zu führen, da es noch nicht ungeheuerlich spät war. Die Sammlung war in der Tat bemerkenswert, doch hatte ich in meiner derzeitigen Stimmung nur Augen für das bizarre Objekt, das in einem Eckschrank unter elektrischem Licht glänzte.
 
-Es brauchte kein übermäßiges Feingefühl für Schönheit um mich regelrecht nach Luft schnappen zu lassen angesichts dieser sonderbaren, unheimlichen Pracht dieser fremdartigen, üppigen Phantasie, die dort auf einem purpurnen Samtkissen ruhte. Sogar jetzt kann ich kaum beschreiben, was ich sah, obwohl es eindeutig eine Art Tiara war, wie die Beschreibung gesagt hatte. Sie war vorne hoch und von großer und auf eigenartige Weise unregelmäßiger Peripherie, als sei sie für einen Kopf von fast außergewöhnlich elliptischer Form entworfen worden. Das Material schien hauptsächlich aus Gold zu bestehen, obwohl ein bizarrer, heller Glanz auf eine eigenartige Legierung mit einem gleichermaßen herrlichen und kaum identifizierbaren Metall hindeutete. Ihr Zustand war fast perfekt und man könnte Stunden damit zubringen, die auffällige und rätselhafte untraditionelle Gestaltung --- teils einfach geometrisch und teils von der See getrieben oder im Hochrelief auf der Oberflöche geformt, von einer Handwerkskunst unglaublichen Könnens und Anmut.
+Es brauchte kein übermäßiges Feingefühl für Schönheit um mich regelrecht nach Luft schnappen zu lassen angesichts der sonderbaren, unheimlichen Pracht dieser fremdartigen, üppigen Phantasie, die dort auf einem purpurnen Samtkissen ruhte. Sogar jetzt kann ich kaum beschreiben, was ich sah, obwohl es eindeutig eine Art Tiara war, wie die Beschreibung gesagt hatte. Sie war vorne hoch und von großer und auf eigenartige Weise unregelmäßiger Peripherie, als sei sie für einen Kopf von fast außergewöhnlich elliptischer Form entworfen worden. Das Material schien hauptsächlich aus Gold zu bestehen, obwohl ein bizarrer, heller Glanz auf eine eigenartige Legierung mit einem gleichermaßen herrlichen und kaum identifizierbaren Metall hindeutete. Ihr Zustand war fast perfekt und man könnte Stunden damit zubringen, die auffällige und rätselhafte untraditionelle Gestaltung --- teils einfach geometrisch und teils von der See getrieben oder im Hochrelief auf der Oberfläche geformt, von einer Handwerkskunst unglaublichen Könnens und Anmut.
 
 Je länger ich es anschaute, desto mehr faszinierte mich das Ding und in dieser Faszination lag ein eigenartig verstörendes Element, kaum einzuordnen oder zu begründen. Zuerst entschied ich, dass die seltsame, übernatürliche Beschaffenheit des Stücks, die mich beunruhigte. Alle anderen Kunstobjekte, die ich je gesehen hatte, gehörten einer bekannten ethnischen oder nationalen Strömung an oder waren sonstwie modernistischer Trotz jeder anerkannten Strömung. Diese Tiara war nichts von dem. Sie gehörte ganz klar zu einer beständigen Technik unendlicher Reife und Perfektion, jedoch war diese Technik gänzlich fern jedweder anderen --- östlich oder westlich, antik oder modern --- von der ich je gehört, oder die ich je veranschaulicht gesehen hatte. Es war als stamme diese Verarbeitung von einem anderen Planeten.
 
-Jedoch bemerkte ich bald, dass mein Unbehagen noch aus einer zweiten, gleichfalls potenten, den bildhaften und mathematischen Andeutungen jener fremden Formen innewohnenden Quelle stammte. Die Muster wiesen alle auf ferne Geheimnisse und unvorstellbare Abgründe in Zeit und Raum und die abwechslungslos aquatische Natur der Reliefs schien fast unheilvoll. Unter diesen Reliefs waren sagenhafte Monster von abscheulicher Groteske und Boshaftigkeit --- halb fisch- und halb froschartiger Suggestion --- die man nicht von einem bestimmten, eindringlichen und unbehaglichen Gefühl von Schein-Erinnerung, als beschwörten sie ein Bild aus tiefliegenden Zellen und Geweben herauf, deren speichernde Funktionen komplett ursprünglich und furchteinflößend angestammt sind. Zeitweise meinte ich, dass jede Kontur dieser frevelhaften Fischfrösche überquoll mit dem letztendlichen Inbegriff unbekannten und unmenschlichen Bösen.
+Jedoch bemerkte ich bald, dass mein Unbehagen noch aus einer zweiten, gleichfalls potenten, den bildhaften und mathematischen Anmutungen jener fremden Formen innewohnenden Quelle stammte. Die Muster wiesen alle auf ferne Geheimnisse und unvorstellbare Abgründe in Zeit und Raum und die abwechslungslos aquatische Natur der Reliefs schien fast unheilvoll. Unter diesen Reliefs waren sagenhafte Monster von abscheulicher Groteske und Boshaftigkeit --- halb fisch- und halb froschartiger Suggestion --- die man nicht von einem bestimmten, eindringlichen und unbehaglichen Gefühl von Schein-Erinnerung, als beschwörten sie ein Bild aus tiefliegenden Zellen und Geweben herauf, deren speichernde Funktionen komplett ursprünglich und furchteinflößend angestammt sind. Zeitweise meinte ich, dass jede Kontur dieser frevelhaften Fischfrösche überquoll mit dem letztendlichen Inbegriff von unbekanntem und unmenschlichem Bösen.
 
 Im krassen Gegensatz zum Anblick der Tiara stand ihre kurze und langweilige, von Miss Tilton berichtete Geschichte. Sie war für eine absurde Summe 1873 in einem Laden in der State Street von einem betrunkenen Innsmouther verpfändet worden, der kurz danach in einer Schlägerei umkam. Die Gesellschaft hatte sie direkt vom Pfandleiher erstanden und ihr sofort einen Schaukasten, der ihrer Qualität würdig war gegeben. Sie war als möglicherweise ostindischer oder indochinesischer Herkunft gekennzeichnet obwohl diese Zuschreibung offensichtlich unverbindlich war.
 
@@ -74,7 +74,7 @@ Miss Tilton, die alle möglichen Hypothesen zu Herkunft und Gegenwart der Tiara 
 
 Während die gute Dame mich auf dem Gebäude führte, klärte sie mich auf, dass die Piratentheorie zum Marsh-Vermögen unter den vernünftigen Menschen der Region gängig war. Ihre eigene Einstellung zum düsteren Innsmouth --- das sie nie gesehen hatte --- war eine geprägt von Abscheu gegenüber einer Gemeinde, die auf der kulturellen Skala weit abglitt und sie versicherte mir, dass die Gerüchte über Teufelsanbetung teils durch einen absonderlichen, geheimen Kult, der dort Fuß gefasst und alle orthodoxen Kirchen verschluckt hatte, bestätigt würden.
 
-Er wurde \glqq Der esoterische Orden des Dagon\grqq\ genannt und war zweifelsohne eine minderwertige, quasi-heidnische Sache, die vor einem Jahrhundert, zu einer Zeit als die Innsmouther Fischgründe zu veröden drohten, importiert worden war. Seine Hartnäckigkeit unter einfältigen Leuten war sehr verständlich in Anbetracht der plötzlichen und dauerhaften Rückkehr überreichlichen Fischfangs und bald wurde er zum größten Einfluss auf die Stadt, die Freimaurerei komplett ersetzend und ließ sich bald in der alten Logenhalle am new Church Green nieder.
+Er wurde \glqq Der Esoterische Orden des Dagon\grqq\ genannt und war zweifelsohne eine minderwertige, quasi-heidnische Sache, die vor einem Jahrhundert, zu einer Zeit als die Innsmouther Fischgründe zu veröden drohten, importiert worden war. Seine Hartnäckigkeit unter einfältigen Leuten war sehr verständlich in Anbetracht der plötzlichen und dauerhaften Rückkehr überreichlichen Fischfangs und bald wurde er zum größten Einfluss auf die Stadt, die Freimaurerei komplett ersetzend und ließ sich bald in der alten Logenhalle am New Church Green nieder.
 
 \looseness=1
 Für die frömmige Miss Tilton ergab dies einen ausgezeichneten Grund, die alte Stadt voll Verwesung und Einöde zu meiden, doch für mich war es lediglich ein weiterer Anreiz. Zu meinen architektonischen und historischen Erwartungen gesellte sich nun noch ein intensiver Eifer und ich konnte kaum schlafen in meinem kleinen Zimmer in der \glqq Y\grqq\ während die Nacht verging.
