--- a/The Shadow over Innsmouth/chapter3.tex
+++ b/The Shadow over Innsmouth/chapter3.tex
@@ -2,7 +2,7 @@
 
 Vielleicht war es ein Alb der Perversheit --- oder die sardonische Anziehungskraft dunklen, verborgenen Ursprungs --- die mich meine Pläne in diese Richtung ändern ließ. Ich hatte lange im Voraus beschlossen, meine Beobachtungen lediglich auf Architektur zu beschränken und ich beeilte mich sogar, um zum Dorfplatz zu gelangen und von dort zeitigen Transport aus dieser verfaulenden Stadt voll Tod und Verwesung zu erlangen, doch der Anblick des alten Zadok Allen lenkte mein Denken in neue Bahnen und ließ mich mein Tempo zögerlich verlangsamen.
 
-Man hatte mir versichert, dass der alte Mann nur wilde, unzusammenhängende und unglaubliche Legenden andeuten konnte und ich war gewarnt worden, dass es gefährlich war, von den Einheimischen im Gespräch mit ihm gesehen zu werden, doch der Gedanke, zu diesem alten Zeitzeugen des städtischen Verfalls mit Erinnerungen, die zurückgehen zu den frühen Tagen der Schifferei und der Fabriken zu sprechen, war eine Verlockung, der keine Vernunft mich standhalten lassen konnte. Im Grunde sind doch die seltsamsten und verrücktesten Mythen oft lediglich Symbole oder Allegorien, die auf Wahrheit fußen --- und der alte Zadok musste alles mit angesehen haben, das sich in den letzten neunzig Jahren hier um Innsmouth herum zugetragen hatte. Die Neugier flammte in mir auf und überstrahlte Verstand und Vorsicht und in meiner jugendlichen Eitelkeit glaubte ich, ich möge ein Körnchen wahrer Geschichte aus der Welle von verwirrten Übertreibungen gewinnen, die ich mit Rohwhiskey höchstwahrscheinlich aus ihm heraus gewinnen würde.
+Man hatte mir versichert, dass der alte Mann nur wilde, unzusammenhängende und unglaubliche Legenden anklingen lassen konnte und ich war gewarnt worden, dass es gefährlich war, von den Einheimischen im Gespräch mit ihm gesehen zu werden, doch der Gedanke, zu diesem alten Zeitzeugen des städtischen Verfalls mit Erinnerungen, die zurückgehen zu den frühen Tagen der Schifferei und der Fabriken zu sprechen, war eine Verlockung, der keine Vernunft mich standhalten lassen konnte. Im Grunde sind doch die seltsamsten und verrücktesten Mythen oft lediglich Symbole oder Allegorien, die auf Wahrheit fußen --- und der alte Zadok musste alles mit angesehen haben, das sich in den letzten neunzig Jahren hier um Innsmouth herum zugetragen hatte. Die Neugier flammte in mir auf und überstrahlte Verstand und Vorsicht und in meiner jugendlichen Eitelkeit glaubte ich, ich möge ein Körnchen wahrer Geschichte aus der Welle von verwirrten Übertreibungen gewinnen, die ich mit Rohwhiskey höchstwahrscheinlich aus ihm heraus gewinnen würde.
 
 Mir war bewusst, dass ich ihn nicht hier und jetzt behelligen konnte, denn die Feuerwehrmänner würden dies sicherlich bemerken und etwas einzuwenden haben. Stattdessen, so überlegte ich, würde ich mich vorbereiten indem ich etwas schwarz gebrannten Schnaps besorgen würde von einem Ort, an dem nach den Beschreibungen des Jungen aus dem Laden reichlich davon vorhanden sein sollte. Danach würde ich ganz beiläufig am Feuerwehrhaus herumlungern und mich zum alten Zadok gesellen, nachdem er zu einem seiner häufigen Streifzüge aufgebrochen war. Der Junge hatte erzählt, dass er sehr rastlos war und selten mehr als eine oder zwei Stunden auf einmal vor der Station saß.
 
@@ -12,7 +12,7 @@ Ich betrat den Platz wieder und sah, dass das Glück mir hold war, denn --- aus 
 
 Ich wählte meinen Weg gemäß der Karte, die der Junge aus dem Lebensmittelladen mir angefertigt hatte und wählte ein vollständig aufgegebenes Stück des südlichen Ufers, das ich zuvor besucht hatte, als Ziel. Die einzigen Leute, die dort zu sehen gewesen waren, waren die Angler auf der weit entfernten Mole und noch ein paar Blocks südlich konnte ich aus deren Sichtweite geraten, ein paar Sitzplätze in einer stillgelegten Werft finden und dann den alten Zadok für unbegrenzte Zeit unbeobachtet befragen. Noch bevor ich die Main Street erreichte konnte ich hinter mir ein schwaches und keuchendes \glqq Hey Mister!\grqq\ vernehmen und erlaubte es dem alten Mann, mich einzuholen und einige kräftige Schlucke aus der Flasche zu nehmen.
 
-Ich begann, meine Fühler auszustrecken während wir die Water Street entlang gingen und uns in mitten der allgegenwärtigen Trostlosigkeit und wirr geneigten Ruinen nach Süden wandten, doch ich fand das die alte Zunge sich nicht so schnell wie ich erhofft hatte, lösen ließ. Nach einiger Zeit sah ich eine grasbewachsene Öffnung zur See hin zwischen verfallenen Ziegelmauern, jenseits derer sich verunkrauteten Ausdehnungen einer alten Werft aus Lehm und Stein zeigten. Haufen von moosbewachsenen Steinen nahe am Wasser versprachen passable Sitzplätze und der Ort war vor jedem möglichen Blick geschützt durch ein zerstörtes Lagerhaus im Norden. Die Aura von Tod und Verlassenheit war morbide und der Fischgestank fast unerträglich, doch ich hatte beschlossen, mich durch nichts abschrecken zu lassen.
+Ich begann, meine Fühler auszustrecken während wir die Water Street entlang gingen und uns in mitten der allgegenwärtigen Trostlosigkeit und wirr geneigten Ruinen nach Süden wandten, doch ich fand das die alte Zunge sich nicht so schnell wie ich erhofft hatte, lösen ließ. Nach einiger Zeit sah ich eine grasbewachsene Öffnung zur See hin zwischen verfallenen Ziegelmauern, jenseits derer sich verunkrauteten Ausdehnungen einer alten Werft aus Lehm und Stein zeigten. Haufen von moosbewachsenen Felsen nahe am Wasser versprachen passable Sitzplätze und der Ort war vor jedem möglichen Blick geschützt durch ein zerstörtes Lagerhaus im Norden. Die Aura von Tod und Verlassenheit war morbide und der Fischgestank fast unerträglich, doch ich hatte beschlossen, mich durch nichts abschrecken zu lassen.
 
 Etwa vier Stunden verblieben mir für Konversation, wenn ich den Acht-Uhr-Bus nach Arkham erwischen wollte und ich begann, dem uralten Säufer mehr Schnaps auszuteilen, während ich meine eigene bescheidene Mahlzeit zu mir nahm. Ich gab acht, bei meiner Ausschank nicht über's Ziel hinauszuschießen, denn ich wollte Zadoks weinselige Geschwätzigkeit nicht in einen Stupor übergehen lassen. Nach einer Stunde schien sein Stillschweigen allmählich zu verschwinden, doch zu meiner Enttäuschung wich er meinen Fragen über Innsmouth und seine von Schatten heimgesuchte Vergangenheit nach wie vor aus. Er plapperte über aktuelle Themen und zeigte gute Kenntnis der Zeitung und eine starke Tendenz dazu, in der Art eines moralisierenden Dörflers zu philosophieren.
 
@@ -40,7 +40,7 @@ Nun, wie gesagt, ha'n die Eingebor'nen die Dinger auf der kleinen Vulkaninsel ge
 
 Als es darum ging, sich mit den froschig'n Fischen zu paaren, ha'n die Kanaken sich erst mal gescheut aber letztendlich was gelernt, das dem Ganzen ein neues Gesicht gab'. Scheint, dass Menschen eine Art von Verwandtschaft mit diesen Wasserviechern hab'n.--- dass alles lebendige ursprünglich mal aus'm Wasser kam un' nur ein paar Veränderungen braucht um wieder zurück zu könn'n. Die Dinger ha'n den Kanaken erzählt, dass wenn sie ihre Blutlinien misch'n, das Kinder brächte, die erst menschlich aussehen aber später mehr un' mehr wie die Dinger wer'n, bis 's sie letz'en'lich zum Wasser zieht un' sie zum Rest der Viecher da unt'n stoßen. Un' das hier iss der wichtige Teil mein Jung' --- die, die zu Fischviechern wurd'n un' ins Wasser gingen, sterben niemals. Die Dinger sterben nie, außer durch Gewalt.
 
-Nun, mein Herr, scheint als ob zu der Zeit als Obed die Inselbewohner kenn'lernte, die schon voll mit Fischblut von den Tiefwasserdingern waren. Wenn sie alt wurd'n un' sich das zeigte, wur'n sie versteckt bis es sie zum Wasser hin un' vom Land weg zog. Ein'ge war'n stärker davon berührt als and're un' manche hab'n sich nie genug verändert, dass es die zum Wasser zog, aber größtenteils hat sich das genauso gefügt wie die Dinger gesagt hatt'n. Die, die stärker wie die Viecher geboren war'n veränderten sich früher aber die, die fast wie Menschen aussahen, blieben manchmal bis sie über siebzig war'n an Land, obwohl die schon davor öfters auf Probeausflüge runter gingen. Leute, die's zum Wasser gezog'n hatte, kamen generell oft zurück zu Besuch, so dass ein'ge mit ihr'n eig'n fünffach'n Urgroßvätern sprach'n, die das trock'ne Land vor'n paarhundert Jahr'n verlassen hatt'n.
+Nun, mein Herr, scheint als ob zu der Zeit als Obed die Inselbewohner kenn'lernte, die schon voll mit Fischblut von den Tiefseedingern waren. Wenn sie alt wurd'n un' sich das zeigte, wur'n sie versteckt bis es sie zum Wasser hin un' vom Land weg zog. Ein'ge war'n stärker davon berührt als and're un' manche hab'n sich nie genug verändert, dass es die zum Wasser zog, aber größtenteils hat sich das genauso gefügt wie die Dinger gesagt hatt'n. Die, die stärker wie die Viecher geboren war'n veränderten sich früher aber die, die fast wie Menschen aussahen, blieben manchmal bis sie über siebzig war'n an Land, obwohl die schon davor öfters auf Probeausflüge runter gingen. Leute, die's zum Wasser gezog'n hatte, kamen generell oft zurück zu Besuch, so dass ein'ge mit ihr'n eig'n fünffach'n Urgroßvätern sprach'n, die das trock'ne Land vor'n paar hundert Jahr'n verlassen hatt'n.
 
 Alle hatten die Idee vom Sterb'n aufgege'n --- außer in Kanu-Krieg'n mit den an'ern Inselbewohnern oder als Opfer an die Meeresgötter tief unt'n oder durch Schlangenbisse, Pest oder gallopierende Krankheit oder ir'ndwas, bevor's sie ins Wasser zog --- sondern erwarteten alle die Veränd'rung, die nach 'ner Weile kein bissl schrecklich mehr war. Sie dachten, was sie draus zog'n war alles wert, was sie dafür aufgege'n hatt'n --- un' ich denk' Obed hat sich das so ähnlich überlegt, als er so über Walakeas Geschichte nachgedacht hat. Aber Walakea gehörte zu den wenig'n die nix von dem Fischblut in sich hatten --- kam aus einer Adelslinie, die sich mit Adelslinien von anderen Inseln verheiratete.
 
@@ -48,17 +48,17 @@ Walakea zeigte Obed eine Menge Riten un' Beschwörungen die mit den Seeviechern 
 
 Matt mochte dieses Treiben überhaupt nich' un' wollte, dass Obed sich von der Insel fern hielt, doch der Käp'n war scharf auf Profit un' fand raus, dass er die Golddinger für'n Spottpreis bekommen konnte, so dass es sich lohn'n würde, sich darauf zu spezialisier'n. Die Dinge liefen so für Jahre un' Obed bekam genug von dem Goldzeug, dass er die Raffinerie in Waite's alter, verkommener Walkmühle aufmachen konnte. Er hat's nie gewagt, die Stücke zu verkaufen wie sie war'n, weil die Leute sonst ständig Fragen stell'n würd'n. So oder so kamen seine Matrosen manchmal an so'n Stück un' wur'n das hie un' da los, obwohl sie geschwor'n hatten, Ruhe zu halten. Un' er hat die Frau'n in seiner Familie 'n paar von den Stücken, die für  Menschen passender aussah'n als die meisten, tragen lassen.
 
-Un' dann, ungefähr Achtun'dreißig als ich sieben war --- fand Obed das ganze Inselvolk von einer Reise auf die nächste ausgelöscht. Schien als hätten die and'ren Inselvölker Wind davon bekomm'n was da vor sich ging un' hatten sich der Sache selbst angenomm', Ich glaub' die hatten doch welche von den alten magischen Zeichen von den'n die Seeviecher sagten, dass sie davor als einziges Angst hatt'n. Nich auszudenken was diese Kanaken sich alles zu schnappen trauen, wenn der Meeresboden 'ne Insel hervortreibt mit Ruinen, die älter sin' als die Sintflut. War'n andächtige Typen, denn sie ha'n nix stehen gelassen, weder auf der Hauptinsel noch auf der klein'n Vulkaninsel, bis auf die Ruinen, die zu groß war'n um sie abzureißen. An manchen Stellen lag'n kleine Steine verstreut --- wie Schutzzauber --- mit 'nem Symbol drauf, dass sie heute als Hakenkreuz nennen. War'n wohl die Zeichen der Großen Alten. Die Menschen war'n ausgelöscht un' es gab' keine Spur von irgendwelchem Goldzeugs un' keiner der anderen Kanaken wollte ein Wort über die Sache verlier'n. Ha'n sogar geleugnet, dass da jemals Leute auf der Insel gelebt hatt'n.
+Un' dann, ungefähr Achtun'dreißig als ich sieben war --- fand Obed das ganze Inselvolk von einer Reise auf die nächste ausgelöscht. Schien als hätten die and'ren Inselvölker Wind davon bekomm'n was da vor sich ging un' hatten sich der Sache selbst angenomm', Ich glaub' die hatten doch welche von den alten magischen Zeichen von den'n die Seeviecher sagten, dass sie davor als einziges Angst hatt'n. Nich auszudenken was diese Kanaken sich alles zu schnappen trauen, wenn der Meeresboden 'ne Insel hervortreibt mit Ruinen, die älter sin' als die Sintflut. War'n andächtige Typen, denn sie ha'n nix stehen gelassen, weder auf der Hauptinsel noch auf der klein'n Vulkaninsel, bis auf die Ruinen, die zu groß war'n um sie abzureißen. An manchen Stellen lag'n kleine Steine verstreut --- wie Schutzzauber --- mit 'nem Symbol drauf, dass sie heute Hakenkreuz nennen. War'n wohl die Zeichen der Großen Alten. Die Menschen war'n ausgelöscht un' es gab' keine Spur von irgendwelchem Goldzeugs un' keiner der anderen Kanaken wollte ein Wort über die Sache verlier'n. Ha'n sogar geleugnet, dass da jemals Leute auf der Insel gelebt hatt'n.
 
 Das traf Obed natürlich sehr hart, da auch seine sonst'gen Geschäfte schlecht gingen. Es traf auch ganz Innsmouth, denn in den Seefahrertagen fiel der Profit eines Kapitäns auch proportional seiner Crew zu. Die meisten Leute in der Stadt nahm'n die harten Zeiten wie die Schafe hin un' resigniert'n, aber sie waren in einer schlecht'n Situation, denn der Fischfang versiegte un' den Fabrik'n ging's auch nich' gut.
 
 Zu der Zeit begann Obed auf die Leute zu fluchen, weil sie dumme Schafe seien un' zum christlich'n Himmel bet'n, der ihnen nix half. Er hat ihnen erzählt, er kenne Leute, die beteten zu Göttern, die das geben, was man wirklich braucht un' wenn genug Männer zu ihm stünden, könnt' er vielleicht gewisse Kräfte anrufen, die jede Menge Fisch un' ein'ges an Gold bringen wür'n. Auf je'n Fall wusst'n die, die auf der \textit{Sumatry Queen} gedient hatten un' die Insel kannt'n, was er meinte un' war'n nich sehr begierig, den Seeviechern von denen sie gehört hatt'n nahe zu komm'n aber die, die nich' wusst'n worum's ging wur'n von dem, was Obed zu erzählen hatte beeinflusst un' fingen an, ihn zu frag'n, was er tun könne um sie auf den Pfad des Glaubens zu schicken, der ihnen Ergebnisse liefere.\grqq
 
-Hier kam der alte Mann ins Stocken, brummelte und verfiel in eine mürrische und besorgte Stille, schaute nervös über seine Schulter und drehte sich dann um um fasziniert das entfernte schwarze Riff anzustarren. Als ich ihn ansprach, antwortete er nicht, da wusste ich, dass ich ihn die Flasche leeren lassen müsste. Das irrsinnige Seemannsgarn, das ich zu hören bekam, interessierte mich ungemein, denn ich wähnte darin eine Art kruder Allegorie, basierend auf der Fremdartigkeit von Innsmouth und ausgearbeitet durch eine Vorstellungskraft, die gleichzeitig kreativ und voll von Fetzen exotischer Legenden ist. Nicht für einen Moment glaubte ich, dass die Geschichte irgendeine haltbare Grundlage besaß, doch nichtsdestoweniger enthielt der Bericht einen Hauch wahren Schreckens. und wenn auch nur durch Verweise auf seltsame Juwelen, die klar der unheilvollen Tiara ähnelten, die ich in Newburyport gesehen hatte. Vielleicht waren diese Ornamente wirklich von irgendeiner absonderlichen Insel gekommen und möglicherweise waren die wilden Geschichten Lügen des verflossenen Obed selbst, statt dieses antiken Saufboldes.
+Hier kam der alte Mann ins Stocken, brummelte und verfiel in eine mürrische und besorgte Stille, schaute nervös über seine Schulter und drehte sich dann um um fasziniert das entfernte schwarze Riff anzustarren. Als ich ihn ansprach, antwortete er nicht, da wusste ich, dass ich ihn die Flasche leeren lassen müsste. Das irrsinnige Seemannsgarn, das ich zu hören bekam, interessierte mich ungemein, denn ich wähnte darin eine Art kruder Allegorie, basierend auf der Fremdartigkeit von Innsmouth und ausgearbeitet durch eine Vorstellungskraft, die gleichzeitig kreativ und voll von Fetzen exotischer Legenden ist. Nicht für einen Moment glaubte ich, dass die Geschichte irgendeine haltbare Grundlage besaß, doch nichtsdestoweniger enthielt der Bericht einen Hauch wahren Schreckens und wenn auch nur durch Verweise auf seltsame Juwelen, die klar der unheilvollen Tiara ähnelten, die ich in Newburyport gesehen hatte. Vielleicht waren diese Ornamente wirklich von irgendeiner absonderlichen Insel gekommen und möglicherweise waren die wilden Geschichten Lügen des verflossenen Obed selbst, statt dieses antiken Saufboldes.
 
 Ich übergab Zadok die Flasche und er leerte sie bis zum letzten Tropfen. Es war sonderbar, dass er soviel Whiskey vertragen konnte, denn nicht eine Spur von Schwere hatte seine Zunge überkommen in ihrer hohen, keuchenden Stimme. Er leckte die Öffnung der Flasche ab und steckte sie in seine Tasche, dann begann er zu nicken und leise in sich hinein zu flüstern. Ich beugte mich nahe zu ihm heran um irgendwelche verständlichen Worte, die er von sich geben möge zu erhaschen und ich glaubte, ein bitteres Lächeln hinter dem befleckten, buschigen Schnurrbart zu sehen. Ja --- er formte tatsächlich Worte und ich konnte einen Gutteil davon verstehen.
 
-\glqq Arme Matt --- Matt, er war immer dageg'n --- hat versucht die Leute auf seiner Seite zu organisier'n un' hatte lange Gespräche mit den Priestern --- alles zwecklos --- sie haben den Gemeindepfarrer aus der Stadt gejagt und der Kerl von den Methodisten hat aufgegeben --- den Baptistenpfarrer Resolved Babcock hab' ich nie wieder gesehen --- Bei Gottes Zorn! --- Ich war ein mächt'ger Lausebengel aber ich hab' gehört, was ich gehört hab' un' geseh'n was ich geseh'n hab' --- Dagon un' Astarte --- Belial un' Beelzebub --- das Goldene Kalb un' die Götzen von Kanaan un' die Philister --- Babylonische Abscheulichkeiten --- Mene, mene, tekel, upharsin ---\grqq
+\glqq Armer Matt --- Matt, er war immer dageg'n --- hat versucht die Leute auf seiner Seite zu organisier'n un' hatte lange Gespräche mit den Priestern --- alles zwecklos --- sie haben den Gemeindepfarrer aus der Stadt gejagt und der Kerl von den Methodisten hat aufgegeben --- den Baptistenpfarrer Resolved Babcock hab' ich nie wieder gesehen --- Bei Gottes Zorn! --- Ich war ein mächt'ger Lausebengel aber ich hab' gehört, was ich gehört hab' un' geseh'n was ich geseh'n hab' --- Dagon un' Astarte --- Belial un' Beelzebub --- das Goldene Kalb un' die Götzen von Kanaan un' die Philister --- Babylonische Abscheulichkeiten --- Mene, mene, tekel, upharsin ---\grqq
 
 Er stoppte wieder und vom Blick in seinen wässrig blauen Augen ausgehend befürchtete ich, dass er doch dem Stupor nahe war. Doch als ich sanft seine Schulter schüttelte, drehte er sich mir mit erstaunlicher Flinkheit zu und spuckte barsch einige weitere obskure Phrasen aus.
 
@@ -76,9 +76,9 @@ Also Junge, das war die Zeit als Obed langsam wieder auf die Beine kam. Die Leut
 
 Denk dran, ich sagte nicht, dass Obed die Dinge genauso haben wollte wie auf der Kanakeninsel. Ich glaub' nich', dass er zunächst Vermischung mit denen vorhatte, oder irgendwelche Jungen aufzuziehen, bis es sie zum Wasser zieht. Er wollte das Goldzeug un' war bereit, viel dafür zu zahlen, un' ich glaub' die and'ren war'n für eine Weile zufrieden...
 
-Bis Sechsun'vierzig hatte sich die Stadt ein wenig umgeschaut un' nachgedacht. Zu viele Leute vermisst --- zu viele wilde Predigten in der Sonntagsmesse --- zuviel Gerede über das Riff. Ich glaub' ich hab' selbst was dazu getan als ich Stadtrat Mowry erzählt hab', was ich von der Kuppel aus geseh'n hatte. Da gab's 'ne Gruppe, die eines Nacht's Obed's Leuten raus auf's Riff gefolgt is un' ich hörte Schüsse zwischen deren Dories. Am nächs'n Tag saßen Obed un' zweiundreißig and're im Gefängnis un' alles wunderte sich, was da im Gange war un' was für eine Anklage erhoben wer'n würd. Gott, wenn ir'ndwer nur vorausgeseh'n hätte... 'n paar Wochen später, als so lange nix mehr ins Meer geworf'n word'n war...\grqq
+Bis Sechsun'vierzig hatte sich die Stadt ein wenig umgeschaut un' nachgedacht. Zu viele Leute vermisst --- zu viele wilde Predigten in der Sonntagsmesse --- zuviel Gerede über das Riff. Ich glaub' ich hab' selbst was dazu getan als ich Stadtrat Mowry erzählt hab', was ich von der Kuppel aus geseh'n hatte. Da gab's 'ne Gruppe, die eines Nacht's Obed's Leuten raus auf's Riff gefolgt is un' ich hörte Schüsse zwischen der'n Dories. Am nächs'n Tag saßen Obed un' zweiundreißig and're im Gefängnis un' alles wunderte sich, was da im Gange war un' was für eine Anklage erhoben wer'n würd. Gott, wenn ir'ndwer nur vorausgeseh'n hätte... 'n paar Wochen später, als so lange nix mehr ins Meer geworf'n word'n war...\grqq
 
-Zadok zeigte Zeichen von Angst und Erschöpfung und ich ließ ihn eine Weile schweigen, obwohl ich besorgt auf meine Uhr starrte. Die Gezeiten hatten gewechselt und die Flut kam heran. Und das Geräusch der Wellen schien ihn zu erregen. Ich war froh über die Flut, den bei Hochwasser würde der Fischgestank vielleicht nicht so stark sein. Wieder strengte ich mich an um sein Geflüster zu verstehen.
+Zadok zeigte Zeichen von Angst und Erschöpfung und ich ließ ihn eine Weile schweigen, obwohl ich besorgt auf meine Uhr starrte. Die Gezeiten hatten gewechselt und die Flut kam heran. Und das Geräusch der Wellen schien ihn zu erregen. Ich war froh über die Flut, denn bei Hochwasser würde der Fischgestank vielleicht nicht so stark sein. Wieder strengte ich mich an um sein Gemurmel zu verstehen.
 
 \glqq Jene furchtbare Nacht... ich hab' sie geseh'n... ich war oben in der Kuppel... Scharen von ihnen... Schwärme von ihnen... über's ganze Riff und schwammen den Hafen hoch in den Manuxet... Gott, was in den Straßen von Innsmouth in der Nacht passiert ist... sie ha'n an der Tür gerüttelt aber Pa wollte nicht aufmach'n... dann isser aus dem Küch'nfenster gestiegen mit seiner Muskete um Stadtrat Mowry zu find'n un' zu seh'n, was er tun könnt'... Haufen von Toten und Sterbend'n... Schüsse un' Schreie... Geschrei im Ol'Square un' aufm Dorfplatz un' New Church Green... das Gefängnis überrannt... Proklamation... Verrat... haben's die Pest genannt als Menschen kamen un' rausfanden, dass die Hälfte unserer Leute fehlte... niemand über außer den'n, die sich Obed un' den Viechern anschlossen oder sonstwie Ruhe halten... hab' nie wieder was von mei'm Pa gehört...\grqq
 
@@ -88,14 +88,14 @@ Der alte Mann keuchte und schwitzte übermäßig. Sein Griff um meine Schulter f
 
 Äußerlich hatte sich nix verändert, nur sollt'n wir uns von Fremd'n fern halten wenn wir wüssten, was gut für uns sei. Wir alle musst'n den Eid des Dagon ablegen un' später gab's 'n zweiten un' 'n dritten Eid, die ein paar von uns ablegten. Die, die im Speziellen halfen un' im Gegenzug spezielle Belohnungen --- Gold un' so weiter --- Keine Widerrede, denn da sin' Millionen von denen da unt'n. Die wollen eigentlich nicht hochsteigen un' die Menschheit auslöschen, aber wenn sie verraten un' dazu gezwungen würden, könnten sie in die Richtung einiges tun. Wir hatten nich' die alten Zauber um sie abzuschneiden wie die Leut' in der Südsee un' die Kanaken hatten ihre Geheimnisse nie preis gegeb'n.
 
-Brachten wir genug Opfer un' wilden Krimskrams hervor un' gewährten Herberge in der Stadt wenn sie's wollt'n, ließen sie uns die meiste Zeit in Ruhe. Sollt'n uns nich' mit Fremd'n abgegeb'n, damit die keine Geschicht'n nach außen trag'n --- allerdings, wurden sie so neugierig. Alles in der Mitte der Gläubig'n --- des Ordens von Davon --- un' die Kinder wür'n niemals sterb'n, sondern zurück zu Mutter Hydra un' Vater Dagon wo wir einst alle herkamen --- \textit{Ia! Ia! Cthulhu fhtagn! Ph’nglui mglw’nafh Cthulhu R’lyeh wgah-nagl fhtagn} ---
+Brachten wir genug Opfer un' wilden Krimskrams hervor un' gewährten Herberge in der Stadt wenn sie's wollt'n, ließen sie uns die meiste Zeit in Ruhe. Sollt'n uns nich' mit Fremd'n abgegeb'n, damit die keine Geschicht'n nach außen trag'n --- allerdings, wurden sie so neugierig. Alles in der Mitte der Gläubig'n --- des Ordens von Dagon --- un' die Kinder wür'n niemals sterb'n, sondern zurück zu Mutter Hydra un' Vater Dagon wo wir einst alle herkamen --- \textit{Ia! Ia! Cthulhu fhtagn! Ph’nglui mglw’nafh Cthulhu R’lyeh wgah-nagl fhtagn} ---
 \grqq
 
 Der alte Zadok verfiel komplett in Raserei und ich hielt meinen Atem an. Arme alte Seele --- zu welchen jämmerlichen Tiefen der Halluzination hatten Alkohol und sein Hass auf Verfall, Fremde und Krankheit um ihn herum dieses fruchtbare, phantasievolle Hirn gebracht! Er fing nun an zu stöhnen und Tränen rannen seine zerfurchten Wangen herunter in seinen Bart.
 
-\glqq Gott, was ich geseh'n hab' seit mei'm fünfzehnten Lebensjahr --- Mene, mene, tekel, upharsin! --- Die vermissten Leute un' die, die sich umgebracht hab'n --- die, die davon in Arkham oder Ipswich erzählt hab'n wur'n alle verrückt genannt, genau so wie Du mich das jetzt nennst --- aber bei Gott, was ich geseh'n hab' --- Sie hätt'n mich schon lange umgebracht, weg'n all dem was ich weiß, aber ich hab' den ersten un' den zweiten Eid des Dagon bei Obed abgelegt un' bin geschützt, bis ein Schwurgericht aus denen beweist, dass ich wissentlich un' vorsätzlich was erzähl hab'... aber ich würde nie den dritten Eid ablegen --- ich würde lieber sterben als den abzuleg'n ---
+\glqq Gott, was ich geseh'n hab' seit mei'm fünfzehnten Lebensjahr --- Mene, mene, tekel, upharsin! --- Die vermissten Leute un' die, die sich umgebracht hab'n --- die, die davon in Arkham oder Ipswich erzählt hab'n wur'n alle verrückt genannt, genau so wie Du mich das jetzt nennst --- aber bei Gott, was ich geseh'n hab' --- Sie hätt'n mich schon lange umgebracht, weg'n all dem was ich weiß, aber ich hab' den ersten un' den zweiten Eid des Dagon bei Obed abgelegt un' bin geschützt, bis ein Schwurgericht aus denen beweist, dass ich wissentlich un' vorsätzlich was erzählt hab'... aber ich würde nie den dritten Eid ablegen --- ich würde lieber sterben als den abzuleg'n ---
 
-Es wurde schlimmer zur Zeit des Bürgerkriegs, als die Kinder, die seit Sechsun'vierzig gebor'n worden war'n aufwuchsen --- ein'ge von ihnen zumindest. Ich hatte Angst --- hab' nie mehr gebetet seit der furchtbaren Nacht un' niemals einen von --- den'n --- aus der Nähe geseh'n in meinem ganzen Leben. Das heißt, zumindes' nie 'n Vollblut. Ich bin in den Krieg gezogen un' wenn ich den Mut oder Verstand gehabt hätte, wär' ich nie wieder gekomm', sondern hätte mich weit weg von hier niedergelassen. Aber Leute schrieben mir, es wär nich' so schlimm. Das, denk ich, war weil Rekrutierungsleute von der Regierung seit Dreiun'sechzig in der Stadt war'n. Nach'm Krieg war's wieder genau so schlimm wie vorher. Die Einwohnerzahl nahm ab --- Fabriken un' Läden schloss'n --- die Schifffahrt ging ein un' der Hafen verstopfte --- die Eisenbahn wurd' aufgegeb'n --- aber die... die hört'n nie auf, den Fluss auf und abzuschwimmen von dem verfluchten Teufelsriff aus --- un' mehr un' mehr Dachfenster wurd'n verbarrikadiert un' mehr un mehr Geräusche war'n in Häusern zu hör'n in denen eigentlich keiner wohn'n sollte...
+Es wurde schlimmer zur Zeit des Bürgerkriegs, als die Kinder, die seit Sechsun'vierzig gebor'n worden war'n aufwuchsen --- ein'ge von den'n zumindest. Ich hatte Angst --- hab' nie mehr gebetet seit der furchtbaren Nacht un' niemals einen von --- den'n --- aus der Nähe geseh'n in meinem ganzen Leben. Das heißt, zumindes' nie 'n Vollblut. Ich bin in den Krieg gezogen un' wenn ich den Mut oder Verstand gehabt hätte, wär' ich nie wieder gekomm', sondern hätte mich weit weg von hier niedergelassen. Aber Leute schrieben mir, es wär nich' so schlimm. Das, denk ich, war weil Rekrutierungsleute von der Regierung seit Dreiun'sechzig in der Stadt war'n. Nach'm Krieg war's wieder genau so schlimm wie vorher. Die Einwohnerzahl nahm ab --- Fabriken un' Läden schloss'n --- die Schifffahrt ging ein un' der Hafen verstopfte --- die Eisenbahn wurd' aufgegeb'n --- aber die... die hört'n nie auf, den Fluss auf und abzuschwimmen von dem verfluchten Teufelsriff aus --- un' mehr un' mehr Dachfenster wurd'n verbarrikadiert un' mehr un mehr Geräusche war'n in Häusern zu hör'n in denen eigentlich keiner wohn'n sollte...
 
 Die Leute drauß'n hab'n ihre Geschichten über uns --- ich denke, Du hast 'ne Menge davon gehört, nach deinen Fragen zu urteil'n --- Geschichten über Dinge, die sie hier un' da geseh'n hab'n un' über den seltsam'n Schmuck der immer noch von ir'ndwo her kommt un' von dem doch nich' alles eingeschmolz'n wird --- aber nix wird je konkret. Niemand will nix glaub'n. Sie sagn' das Goldzeugs sei Piratenbeute un' alle Innsmouther hab'n fremdes Blut, sin' missgestimmt oder ir'ndwas. Außerdem verscheuchen die, die hier leb'n so viele Fremde wie sie nur könn' un' bestärken den Rest darin, nich' sehr neugierig zu wer'n, ganz speziell nachts. Die Viecher mochten keine Tiere --- Pferde scheut'n, un' die Maultiere --- aber als Autos aufkamen, hat sich das gelegt.
 
@@ -110,7 +110,7 @@ Mittlerweile hat sich Barnabas verändert. Kann die Aug'n nich' mehr schließen 
 
 Zadok schrie nun förmlich und die irre Raserei in seiner Stimme verstörte mich mehr als mir lieb war.
 
-\glqq Verflucht, sitz nicht da und starr mich mit diesen Augen an --- Ich sag dir, Obed Marsh is' in der Hölle un' da muss er auch bleiben! Hehehe... in der Hölle, sag ich! Kann mich nich' kriegen --- Ich hab' nix gemacht un' niemandem was erzählt ---
+\glqq Verflucht, sitz nich' da und starr mich mit diesen Augen an --- Ich sag dir, Obed Marsh is' in der Hölle un' da muss er auch bleiben! Hehehe... in der Hölle, sag ich! Kann mich nich' kriegen --- Ich hab' nix gemacht un' niemandem was erzählt ---
 
 Oh, Du junger Bursche? Nun, selbst wenn ich bis jetzt noch niemand'm was erzählt hab', werd' ich das jetz'! Sitz du nur still un' hör mir zu, Junge --- das hier hab' ich noch niemand'm erzählt... Ich sag, ich war nicht neugierig nach jener Nacht --- aber ich hab' trotzdem Sach'n rausgefund'n!
 
@@ -121,7 +121,7 @@ Hey, hörst Du mich? Ich sag dir, ich weiß was die Dinger sin' --- ich hab' sie
 
 Die abscheuliche Plötzlichkeit und das unmenschliche Grauen des alten Mannes' Schreies ließ mich fast ohnmächtig werden. Seine Augen, an mir vorbei auf die übelriechende See starrend, schienen förmlich aus seinem Kopf zu springen während sein Gesicht sich zu einer Maske der Furcht, einer griechischen Tragödie werd verzog. Seine knochige Klaue grub sich in meine Schulter und er bewegte sich nicht als ich meinen Kopf drehte um zu sehen, was er erblickt hatte.
 
-Da war für mich nichts zu sehen. Nur die herankommende Flut, die vielleicht ein Kräuseln näher kam als die entlegenen Brecher. Doch Zadok schüttelte mich und ich drehte mich zurück um das vor Furcht erstarrte Gesicht in ein Chaos aus zuckenden Augenbrauen und murmelnden, zahnlosen Kiefern. Bald kehrte seine Stimme zurück --- jedoch als ein wimmerndes Flüstern.
+Da war für mich nichts zu sehen. Nur die herankommende Flut, die vielleicht ein Kräuseln näher kam als die entlegenen Brecher. Doch Zadok schüttelte mich und ich drehte mich zurück und sah das vor Furcht erstarrte Gesicht in ein Chaos aus zuckenden Augenbrauen und murmelnden, zahnlosen Kiefern zerschmelzen. Bald kehrte seine Stimme zurück --- jedoch als ein wimmerndes Flüstern.
 
 \glqq Verschwinde von hier! Verschwinde von hier! Sie hab'n uns geseh'n --- Verschwinde, wenn dir dein Leben lieb ist! Warte auf nix und niemanden --- sie wissen jetzt Bescheid --- Lauf was Du kannst --- schnell raus aus dieser Stadt ---
 \grqq
