--- a/The Shadow over Innsmouth/chapter5.tex
+++ b/The Shadow over Innsmouth/chapter5.tex
@@ -2,19 +2,19 @@
 
 Es war ein sanfter Regen, der mich bei Tage in dem mit Gestrüpp bewachsenen Kanal aus meiner Benommenheit erweckte und als ich auf die Straße stolperte, war keine Spur irgendwelcher Fußstapfen im Schlamm zu sehen. Der Fischgestank war ebenfalls verschwunden. Innsmouth's verfallene Dächer und eingestürzte Türme thronten grau im Südosten, doch ich erspähte kein Lebewesen in den trostlosen Salzmarschen der Umgebung. Meine Uhr tickte noch und zeigte mir, dass es nach Mittag war.
 
-Die Realität dessen, was ich durchgemacht hatte, lag sehr ungewiss in meinem Bewusstsein, doch ich fühlte, dass etwas abscheuliches dort im Hintergrund lag. Ich musste weg von diesem vom Bösen überschatteten Innsmouth --- und so begann ich meine verkrampften, müden Glieder in Bewegung zu setzen. Trotz Schwäche, Hunger, Abscheu und Verwirrung fühlte ich mich nach einer geraumen Zeit fähig zu gehen, so dass ich langsam entlang der matschigen Straße nach Rowley losging. Bis zum Abend war ich im Dorf, hatte eine Mahlzeit zu mir genommen und mich mit vorzeigbaren Kleidern ausgestattet. Ich erwischte den Nachtzug nach Arkham und hatte am nächsten Tag ein langes und ernstes Gespräch mit Regierungsbeamten dort. Ein Prozess, den ich später in Boston wiederholte. Die hauptsächlichen Ergebnisse dieser Gespräche sind der Öffentlichkeit --- und ich wünschte, um der Normalität wegen, dass es nichts weiter zu erzählen gäbe. Vielleicht ist es der Wahnsinn, der mich überkommt --- doch vielleicht greift nun ein größerer Schrecken --- oder ein großes Wunder --- nach mir.
+Die Realität dessen, was ich durchgemacht hatte, lag sehr ungewiss in meinem Bewusstsein, doch ich fühlte, dass etwas abscheuliches dort im Hintergrund lag. Ich musste weg von diesem vom Bösen überschatteten Innsmouth --- und so begann ich meine verkrampften, müden Glieder in Bewegung zu setzen. Trotz Schwäche, Hunger, Abscheu und Verwirrung fühlte ich mich nach einer geraumen Zeit fähig zu gehen, so dass ich mich langsam entlang der matschigen Straße nach Rowley bewegte. Bis zum Abend war ich im Dorf, hatte eine Mahlzeit zu mir genommen und mich mit vorzeigbaren Kleidern ausgestattet. Ich erwischte den Nachtzug nach Arkham und hatte am nächsten Tag ein langes und ernstes Gespräch mit Regierungsbeamten dort. Ein Prozess, den ich später in Boston wiederholte. Die hauptsächlichen Ergebnisse dieser Gespräche sind der Öffentlichkeit wohlbekannt --- und ich wünschte, um der Normalität wegen, dass es nichts weiter zu erzählen gäbe. Vielleicht ist es der Wahnsinn, der mich überkommt --- doch vielleicht greift nun ein größerer Schrecken --- oder ein großes Wunder --- nach mir.
 
 Wie man sich vorstellen kann, gab ich die meisten meiner geplanten Ziele für den Rest meiner Reise auf --- jene malerischen, architektonischen und antiquarischen Zeitvertreibe auf die ich mich so sehr gestützt hatte. Ich wagte es auch nicht, das seltsame Schmuckstück anzusehen, das im Museum der Miskatonic University ausgestellt sein soll. Ich machte jedoch etwas aus meinem Aufenthalt in Arkham indem ich einige genealogische Notizen sammelte, für die ich schon lange interessiert hatte; sehr grobe und flüchtige Daten, das ist wohl wahr, doch würden sie sie mir später nützlich sein können, wenn ich die Zeit hätte, sie zu vergleichen und einzuordnen. Der Kurator örtlichen des Geschichtsvereins --- Mr. E. Lapham Peabody --- war sehr zuvorkommend in seiner Unterstützung und bekundete ungewöhnlich starkes Interesse als ich ihm erzählte, dass ich ein Enkel von Eliza Orne aus Arkham sei, die 1867 geboren, James Williamson aus Ohio im Alter von siebzehn Jahren geheiratet hatte.
 
-Es schien, dass einer meiner Onkel mütterlicherseits vor vielen Jahren im Rahmen einer ähnlichen Untersuchung dort gewesen war und dass die Familie meiner Großmutter lokal ein Thema von einiger Merkwürdigkeit war. Es hatte laut Mr. Peabody eine rege Debatte um die Hochzeit ihres Vaters Benjamin Orne direkt nach dem Bürgerkrieg gegeben, da insbesondere der Stammbaum der Braut rätselhaft war. Man hielt diese Braut für eine verwaiste Marsh aus New Hampshire --- eine Cousine der Essex County Marshes --- doch war sie in Frankreich großgezogen worden und wusste nur sehr wenig über ihre Familie. Ein Vormund hatte in einer Bostoner Bank Geld hinterlegt um sie und ihre französische Gouvernante zu unterhalten, doch der Name jenes Vormundes war den Arkhamern nicht bekannt und er war alsbald nicht mehr aufzufinden, somit übernahm die Gouvernante diese Rolle per Gerichtsbeschluss. Die Französin --- schon lange tot --- war sehr schweigsam und es gab jene, die behaupteten, sie hätte mehr erzählen können, als sie es getan hatte.
+Es schien, dass einer meiner Onkel mütterlicherseits vor vielen Jahren im Rahmen einer ähnlichen Untersuchung dort gewesen war und dass die Familie meiner Großmutter lokal ein Thema von einiger Kuriosität war. Es hatte laut Mr. Peabody eine rege Debatte um die Hochzeit ihres Vaters Benjamin Orne direkt nach dem Bürgerkrieg gegeben, da insbesondere der Stammbaum der Braut rätselhaft war. Man hielt diese Braut für eine verwaiste Marsh aus New Hampshire --- eine Cousine der Essex County Marshes --- doch war sie in Frankreich großgezogen worden und wusste nur sehr wenig über ihre Familie. Ein Vormund hatte in einer Bostoner Bank Geld hinterlegt um sie und ihre französische Gouvernante zu unterhalten, doch der Name jenes Vormundes war den Arkhamern nicht bekannt und er war alsbald nicht mehr aufzufinden, somit übernahm die Gouvernante diese Rolle per Gerichtsbeschluss. Die Französin --- schon lange tot --- war sehr schweigsam gewesen und es gab jene, die behaupteten, sie hätte mehr erzählen können, als sie es getan hatte.
 
-Doch das rätselhafteste war, dass niemand fähig war, die erfassten Eltern der jungen Frau --- Enoch und Lydia (Meserve) Marsh --- irgendeiner der bekannten Familien von New Hampshire zuzuordnen. Möglicherweise, so wurde suggeriert, war sie die leibliche Tochter irgendeines Marsh von Bekanntheit --- sie hatte immerhin die echten Marsh-Augen. Das meiste dieses Kopfzerbrechens fand nach ihrem frühen Tod statt, der mit der Geburt meiner Großmutter, ihres einzigen Kindes, eintrat. Da mich einige unangenehme Eindrücke mit dem Namen Marsh verbanden, fand ich die Neuigkeit, dass er zu meinem eigenen Stammbaum gehörte gar nicht begrüßenswert und ich war auch nicht erfreut als Mr. Peabody andeutete, dass ich selbst die Marsh-Augen besaß. Ich war jedoch dankbar für die Daten, die sich sicher als wertvoll erweisen würden und machte reichlich Notizen und Listen von Referenzen bezüglich der gut dokumentierten Orne-Familie.
+Doch das rätselhafteste war, dass niemand fähig war, die erfassten Eltern der jungen Frau --- Enoch und Lydia (Meserve) Marsh --- irgendeiner der bekannten Familien von New Hampshire zuzuordnen. Möglicherweise, so wurde suggeriert, war sie die leibliche Tochter irgendeines Marsh von Bekanntheit --- sie hatte immerhin die echten Marsh-Augen. Das meiste dieses Kopfzerbrechens fand nach ihrem frühen Tod statt, der mit der Geburt meiner Großmutter, ihres einzigen Kindes, eintrat. Da mich einige unangenehme Eindrücke mit dem Namen Marsh verbanden, fand ich die Neuigkeit, dass er zu meinem eigenen Stammbaum gehörte gar nicht begrüßenswert und ich war auch nicht erfreut als Mr. Peabody andeutete, dass ich selbst die Marsh-Augen besäße. Ich war jedoch dankbar für die Daten, die sich sicher als wertvoll erweisen würden und machte reichlich Notizen und Listen von Referenzen bezüglich der gut dokumentierten Orne-Familie.
 
-Ich reiste direkt von Boston heim nach Toledo und verbrachte später einen Monat in Maumee um mich von jenem Martyrium zu erholen. Im September ging ich für mein letztes Studienjahr nach Oberlin und war von da an bis zum nächsten Juli beschäftigt mit dem Studium und anderen erbaulichen Aktivitäten --- an den vergangenen Schrecken nur durch gelegentliche Besuche von Regierungsleuten erinnert, die in Verbindung mit der Kampagne, die meine Gesuche und Beweise losgetreten hatten. Etwa Mitte Juli --- nur ein Jahr nach den Erlebnissen in Innsmouth --- verbrachte ich eine Woche bei der Familie meiner verstorbenen Mutter in Cleveland und verglich einige meiner neuen genealogischen Daten mit den verschiedenen Aufzeichnungen, Überlieferungen und Erbstücken dort um zu sehen, was ich für eine Verbindungskarte erstellen konnte.
+Ich reiste direkt von Boston heim nach Toledo und verbrachte später einen Monat in Maumee um mich von jenem Martyrium zu erholen. Im September ging ich für mein letztes Studienjahr nach Oberlin und war von da an bis zum nächsten Juli beschäftigt mit dem Studium und anderen erbaulichen Aktivitäten --- an den vergangenen Schrecken nur durch gelegentliche Besuche von Regierungsleuten erinnert, die in Verbindung mit der Kampagne, die meine Gesuche und Beweise losgetreten hatte standen. Etwa Mitte Juli --- nur ein Jahr nach den Erlebnissen in Innsmouth --- verbrachte ich eine Woche bei der Familie meiner verstorbenen Mutter in Cleveland und verglich einige meiner neuen genealogischen Daten mit den verschiedenen Aufzeichnungen, Überlieferungen und Erbstücken dort um zu sehen, was ich für eine Verbindungskarte erstellen konnte.
 
 Ich fand an dieser Arbeit nicht gerade großen Gefallen, denn die Atmosphäre des Williamson-Hauses hatte etwas Deprimierendes für mich. Es lastete dort ein morbider Druck auf allem und meine Mutter hatte Besuche bei ihren Eltern in meiner Kindheit nie angeregt, obwohl sie ihren Vater immer willkommen geheißen hatte, wenn er in Toledo war. Meine in Arkham geborene Großmutter war mir immer merkwürdig und fast furchterregend vorgekommen und ich glaube, ich hatte nicht getrauert, als sie verschwand. Ich war damals acht Jahre alt und man hatte sich erzählt, dass sie in Trauer um den Selbstmord meines Onkel Douglas, ihres ältesten Sohnes, davongezogen war. Er hatte sich nach einer Reise nach Neuengland erschossen --- zweifelsohne die selbe Reise durch die man sich beim Geschichtsverein von Arkham an ihn erinnerte.
 
-Dieser Onkel hatte ihr ähnlich gesehen und ich hatte ihn ebenfalls nie gemocht. Irgendetwas an beider starrem, unverwandtem Blick hatte in mir vages, unerklärliches Unbehagen verursacht. Meine Mutter und Onkel Walter hatten nicht so ausgesehen. Sie waren nach ihrem Vater  gekommen, obwohl der arme kleine Cousin Lawrence --- Walter's Sohn --- fast ein perfektes Duplikat seiner Großmutter gewesen war, bis ihn seine Krankheit in die permanente Abschottung einer Nervenklinik in Canton gezwungen hatte. Ich hatte ihn vier Jahre lang nicht gesehen, doch mein Onkel hatte einmal angedeutet, dass sein Zustand, geistig wie körperlich sehr schlecht war. Diese Sorge war vermutlich die Ursache für den Tod seiner Mutter zwei Jahre zuvor.
+Dieser Onkel hatte ihr ähnlich gesehen und ich hatte ihn ebenfalls nie gemocht. Irgendetwas an beider starrem, unverwandtem Blick hatte in mir vages, unerklärliches Unbehagen verursacht. Meine Mutter und Onkel Walter hatten nicht so ausgesehen. Sie waren nach ihrem Vater  gekommen, obwohl der arme kleine Cousin Lawrence --- Walter's Sohn --- fast ein perfektes Duplikat seiner Großmutter gewesen war, bis ihn seine Krankheit in die permanente Abschottung einer Nervenklinik in Canton gezwungen hatte. Ich hatte ihn vier Jahre lang nicht gesehen, doch mein Onkel hatte einmal anklingen lassen, dass sein Zustand, geistig wie körperlich sehr schlecht war. Diese Sorge war vermutlich die Ursache für den Tod seiner Mutter zwei Jahre zuvor.
 
 Der Cleveland-Haushalt bestand nun aus meinem Großvater und seinem verwitweten Sohn Walter, doch die Erinnerung an frühere Zeiten hing schwer über ihnen. Ich mochte den Ort nach wie vor nicht und versuchte, meine Nachforschungen so schnell wie möglich zu erledigen. Die Williamson-\-Aufzeichnungen und Überlieferungen wurden in großer Zahl durch meinen Großvater bereitgestellt, doch für Material zu den Ornes musste ich mich auf meinen Onkel Walter verlassen, der mir den Inhalt all seiner Akten inklusive Notizen, Briefen, Zeitungsausschnitten, Erbstücken, Fotos und Miniaturen zur Verfügung stellte.
 
@@ -24,13 +24,13 @@ Doch den schlimmsten Schock erfuhr ich, als mein Onkel mir den Orne-Schmuck in e
 
 Als mein Onkel langsam und widerwillig begann, die Stücke auszuwickeln, bat er mich, nicht schockiert zu sein ob der Fremdartigkeit und häufigen Hässlichkeit der Formen. Die Handwerkskunst war von Künstlern und Archäologen als überragend und exquisit exotisch beurteilt worden, doch niemand konnte das genaue Material bestimmen oder sie irgendeiner speziellen Kunsttradition zuordnen. Da waren zwei Amulette, eine Tiara und eine Art Pektorale, welches im Hochrelief diverse Figuren von nicht auszuhaltender Extravaganz darstelle.
 
-Während dieser Beschreibung hielt ich meine Emotionen fest im Zaum, doch muss mein Gesicht meine wachsende Furcht verraten haben. Mein Onkel schaute betroffen und hielt im Auswickeln inne um meine Miene zu studieren. Ich gab ihm ein Zeichen, fortzufahren und er tat dies noch zögerlicher als zuvor. Er schien irgendeinen Protest zu erwarten, doch ich bezweifle, dass er mit dem, was nun wirklich passierte gerechnet hatte. Ich hatte damit auch nicht gerechnet, denn ich dachte, ich sei sorgfältig vorgewarnt, wie der Schmuck aussehen würde. Ich fiel lediglich leise in Ohnmacht, wie ich es im Jahr zuvor in dem von Sträuchern überwucherten Bahnkanal.
+Während dieser Beschreibung hielt ich meine Emotionen fest im Zaum, doch muss mein Gesicht meine wachsende Furcht verraten haben. Mein Onkel schaute betroffen und hielt im Auswickeln inne um meine Miene zu studieren. Ich gab ihm ein Zeichen, fortzufahren und er tat dies noch zögerlicher als zuvor. Er schien irgendeinen Protest zu erwarten, doch ich bezweifle, dass er mit dem, was nun wirklich passierte gerechnet hatte. Ich hatte damit auch nicht gerechnet, denn ich dachte, ich sei sorgfältig vorgewarnt, wie der Schmuck aussehen würde. Ich fiel lediglich leise in Ohnmacht, wie ich es im Jahr zuvor in dem von Sträuchern überwucherten Bahnkanal getan hatte.
 
-Seit diesem Tag ist mein Leben ein Alptraum voller Grübelei und Sorge und ich weiß auch nicht, was davon grässliche Wahrheit ist und was Wahnsinn. Meine Urgroßmutter war eine Marsh unbekannter Herkunft deren Ehemann in Arkham lebte --- und hatte nicht der alte Zadok erzählt, dass die Tochter von Obed Marsh und einer abscheulichen Mutter durch einen Trick an einen Mann aus Arkham verheiratet wurde? Was war es, das der alte Säufer über die Ähnlichkeit meiner Augen zu denen von Käpt'n Obed gemurmelt hatte? Auch in Arkham hatte der Kurator mir erzählt, ich hätte die echten Marsh-Augen. War Obed Marsh mein leibhaftiger Ur-Urgroßvater? Wer --- oder \textit{was} --- war dann meine Ur-Urgroßmutter? Doch vielleicht war all dies Wahnsinn. Jene weiß-goldenen Ornamente könnten auch leicht durch den Vater meiner Urgroßmutter, wer immer er war, von einem Seemann aus Innsmouth gekauft worden sein. Und der Blick in den starräugigen Gesichtern meiner Großmutter  und dem Onkel, der den Freitod gewählt hatte, könnten bloße Einbildung meinerseits sein --- bloße Einbildung, bestärkt durch den Schatten von Innsmouth, der meine Vorstellungskraft so dunkel färbte. Doch warum hatte mein Onkel sich umgebracht nach einer Untersuchung seiner Vorfahren in Neuengland?
+Seit diesem Tag ist mein Leben ein Alptraum voller Grübelei und Sorge und ich weiß auch nicht, was davon grässliche Wahrheit ist und was Wahnsinn. Meine Urgroßmutter war eine Marsh unbekannter Herkunft deren Ehemann in Arkham lebte --- und hatte nicht der alte Zadok erzählt, dass die Tochter von Obed Marsh und einer abscheulichen Mutter durch einen Trick an einen Mann aus Arkham verheiratet wurde? Was war es, das der alte Säufer über die Ähnlichkeit meiner Augen zu denen von Käpt'n Obed gemurmelt hatte? Auch in Arkham hatte der Kurator mir erzählt, ich hätte die echten Marsh-Augen. War Obed Marsh mein leibhaftiger Ur-Urgroßvater? Wer --- oder \textit{was}  --- war dann meine Ur-Urgroßmutter? Doch vielleicht war all dies Wahnsinn. Jene weiß-goldenen Ornamente könnten auch leicht durch den Vater meiner Urgroßmutter, wer immer er war, von einem Seemann aus Innsmouth gekauft worden sein. Und der Blick in den starräugigen Gesichtern meiner Großmutter  und dem Onkel, der den Freitod gewählt hatte, könnten bloße Einbildung meinerseits sein --- bloße Einbildung, bestärkt durch den Schatten von Innsmouth, der meine Vorstellungskraft so dunkel färbte. Doch warum hatte mein Onkel sich umgebracht nach einer Untersuchung seiner Vorfahren in Neuengland?
 
-Für mehr als zwei Jahre wehrte ich diese Betrachtungen mit mäßigem Erfolg ab. Mein Vater beschaffte mir eine Position in einem Versicherungsbüro und ich vergrub mich so tief wie möglich in Routine. Im Winter von 1930-31 jedoch begannen die Träume. Sie waren anfangs spärlich und schleichend, doch erhöhte sich ihre Häufigkeit und Klarheit während die Wochen vergingen. Große, feuchte Orte eröffneten sich mir und ich schien durch gigantische, versunkene Säulenhallen zu schreiten und durch Labyrinthe aus seegrasbewachsenen zyklopischen Wänden mit grotesken Fischen als Begleitern. Dann tauchten die \textit{anderen}  Gestalten auf und erfüllten mich mit namenlosem Schrecken im Moment meines Erwachens. Doch in meinen Träumen schockierten sie mich überhaupt nicht --- ich war eins mit ihnen, trug ihren unmenschlichen Putz, schritt auf ihren wässrigen Wegen und betete ungeheuerlich in ihren bösen Tempeln am Meeresgrund.
+Für mehr als zwei Jahre wehrte ich diese Betrachtungen mit mäßigem Erfolg ab. Mein Vater beschaffte mir eine Position in einem Versicherungsbüro und ich vergrub mich so tief wie möglich in Routine. Im Winter von 1930-31 jedoch begannen die Träume. Sie kamen anfangs spärlich und schleichend, doch erhöhte sich ihre Häufigkeit und Klarheit während die Wochen vergingen. Große, feuchte Orte eröffneten sich mir und ich schien durch gigantische, versunkene Säulenhallen zu schreiten und durch Labyrinthe aus seegrasbewachsenen zyklopischen Wänden mit grotesken Fischen als Begleitern. Dann tauchten die \textit{anderen}  Gestalten auf und erfüllten mich mit namenlosem Schrecken im Moment meines Erwachens. Doch in meinen Träumen schockierten sie mich überhaupt nicht --- ich war eins mit ihnen, trug ihren unmenschlichen Putz, schritt auf ihren wässrigen Wegen und betete ungeheuerlich in ihren bösen Tempeln am Meeresgrund.
 
-Da war viel mehr als meine Erinnerung zuließ, doch selbst das, dessen ich mich morgens erinnern konnte wäre genug um mich als Verrückten abzustempeln oder als Genie, wenn ich je gewagt hätte, es aufzuschreiben. Ich fühlte, dass ein fürchterlicher Einfluss nach und nach versuchte, mich aus meiner normalen Welt erbaulichen Lebens in unnennbare Abgründe voll Schwärze und Fremdartigkeit und der Prozess hinterließ schlimme Spuren an mir. Meine Gesundheit und mein Aussehen litten immer schwerer bis ich letztendlich gezwungen war, meinen Posten aufzugeben und das stationäre, abgeschiedene Leben eines Pflegefalles anzunehmen. Ein seltsames Nervenleiden hatte mich in seinem Griff und ich fand, dass es mir manchmal unmöglich war, die Augen zu schließen.
+Da war viel mehr als meine Erinnerung zuließ, doch selbst das, dessen ich mich morgens erinnern konnte wäre genug um mich als Verrückten abzustempeln oder als Genie, wenn ich je gewagt hätte, es aufzuschreiben. Ich fühlte, dass ein fürchterlicher Einfluss nach und nach versuchte, mich aus meiner normalen Welt erbaulichen Lebens in unnennbare Abgründe voll Schwärze und Fremdartigkeit zu ziehen und der Prozess hinterließ schlimme Spuren an mir. Meine Gesundheit und mein Aussehen litten immer schwerer bis ich letztendlich gezwungen war, meinen Posten aufzugeben und das stationäre, abgeschiedene Leben eines Pflegefalles anzunehmen. Ein seltsames Nervenleiden hatte mich in seinem Griff und ich fand, dass es mir manchmal unmöglich war, die Augen zu schließen.
 
 Es war zu dieser Zeit, dass ich begann, mit wachsender Sorge den Spiegel zu studieren. Die schleichende Verheerung der Krankheit ist nicht angenehm zu beobachten, doch in meinem Fall lag etwas subtileres und rätselhafteres dahinter. Mein Vater schien es ebenfalls zu bemerken, denn er begann, mich neugierig und fast mit Schrecken anzuschauen. Was ging in mir vor? Konnte es sein, dass ich anfing, meiner Großmutter und Onkel Douglas ähnlich zu sehen?
 
